--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "horizonThread"
   , "version": "0.0.2"
+  , "engines": {
+  	  "node": "0.6.13",
+  	  "npm":  "1.1.9"
+  }
   , "dependencies": {
       "express": "2.5.8"
     , "jade": "0.21.0"
